# language-ninja

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  CHANGELOG.md  DAG.hs  LICENSE.md  Main.hs  Makefile  README.md  Setup.hs  build.ninja  default.nix  index.html  language-ninja.cabal  release.nix  shell.nix
.github/: CODEOWNERS  CONTRIBUTING.md
executables/: NinjaToNix.hs
executables/Misc/: Hash.hs  Supply.hs
executables/NinjaToNix/: Pretty.hs  Types.hs
executables/NinjaToNix/Misc/: Hash.hs  Supply.hs
executables/ninja-compile/: Main.hs
executables/ninja-lex/: Main.hs
executables/ninja-parse/: Main.hs
haddock/: Language-Ninja-AST-Build.html  Language-Ninja-AST-Deps.html  Language-Ninja-AST-Env.html  Language-Ninja-AST-Expr.html  Language-Ninja-AST-Ninja.html  Language-Ninja-AST-Rule.html  Language-Ninja-AST.html  Language-Ninja-Compile.html  Language-Ninja-Errors-Compile.html  Language-Ninja-Errors-Parser.html  Language-Ninja-Errors.html  Language-Ninja-IR-Build.html  Language-Ninja-IR-Meta.html  Language-Ninja-IR-Ninja.html  Language-Ninja-IR-Pool.html  Language-Ninja-IR-Rule.html  Language-Ninja-IR-Target.html  Language-Ninja-IR.html  Language-Ninja-Lexer.html  Language-Ninja-Misc-Annotated.html  Language-Ninja-Misc-Command.html  Language-Ninja-Misc-IText.html  Language-Ninja-Misc-Located.html  Language-Ninja-Misc-Path.html  Language-Ninja-Misc-Positive.html  Language-Ninja-Misc.html  Language-Ninja-Mock-ReadFile.html  Language-Ninja-Mock.html  Language-Ninja-Parser.html  Language-Ninja-Pretty.html  Language-Ninja-Tutorial.html  Language-Ninja.html  doc-index-95.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  (+51 more)
haddock/src/: Language-Ninja-AST-Build.html  Language-Ninja-AST-Deps.html  Language-Ninja-AST-Env.html  Language-Ninja-AST-Expr.html  Language-Ninja-AST-Ninja.html  Language-Ninja-AST-Rule.html  Language-Ninja-AST.html  Language-Ninja-Compile.html  Language-Ninja-Errors-Compile.html  Language-Ninja-Errors-Parser.html  Language-Ninja-Errors.html  Language-Ninja-IR-Build.html  Language-Ninja-IR-Meta.html  Language-Ninja-IR-Ninja.html  Language-Ninja-IR-Pool.html  Language-Ninja-IR-Rule.html  Language-Ninja-IR-Target.html  Language-Ninja-IR.html  Language-Ninja-Lexer.html  Language-Ninja-Misc-Annotated.html  Language-Ninja-Misc-Command.html  Language-Ninja-Misc-IText.html  Language-Ninja-Misc-Located.html  Language-Ninja-Misc-Path.html  Language-Ninja-Misc-Positive.html  Language-Ninja-Misc.html  Language-Ninja-Mock-ReadFile.html  Language-Ninja-Mock.html  Language-Ninja-Parser.html  Language-Ninja-Pretty.html  Language-Ninja-Tutorial.html  Language-Ninja.html
hpc/: hpc_index.html  hpc_index_alt.html  hpc_index_exp.html  hpc_index_fun.html
hpc/language-ninja-0.0.1-3ntclsWtpEZ1zthJO6QNWo/: Language.Ninja.AST.Build.hs.html  Language.Ninja.AST.Deps.hs.html  Language.Ninja.AST.Env.hs.html  Language.Ninja.AST.Expr.hs.html  Language.Ninja.AST.Ninja.hs.html  Language.Ninja.AST.Rule.hs.html  Language.Ninja.AST.hs.html  Language.Ninja.Compile.hs.html  Language.Ninja.Errors.Compile.hs.html  Language.Ninja.Errors.Parser.hs.html  Language.Ninja.Errors.hs.html  Language.Ninja.IR.Build.hs.html  Language.Ninja.IR.Meta.hs.html  Language.Ninja.IR.Ninja.hs.html  Language.Ninja.IR.Pool.hs.html  Language.Ninja.IR.Rule.hs.html  Language.Ninja.IR.Target.hs.html  Language.Ninja.IR.hs.html  Language.Ninja.Lexer.hs.html  Language.Ninja.Misc.Annotated.hs.html  Language.Ninja.Misc.Command.hs.html  Language.Ninja.Misc.IText.hs.html  Language.Ninja.Misc.Located.hs.html  Language.Ninja.Misc.Path.hs.html  Language.Ninja.Misc.Positive.hs.html  Language.Ninja.Misc.hs.html  Language.Ninja.Mock.ReadFile.hs.html  Language.Ninja.Mock.hs.html  Language.Ninja.Parser.hs.html  Language.Ninja.Pretty.hs.html  Language.Ninja.Tutorial.hs.html  Language.Ninja.hs.html
misc/: haddock.css  haddock.js
nix/: declarative.nix  default.nix  language-ninja.nix  monad-mock.nix  nixpkgs.json  prettyprinter.nix  spec.json
nix/haskell/: language-ninja.nix  makefile.nix  versions.nix
src/: Hash.hs  Main.hs
src/Ninja/: All.hs  Env.hs  Eval.hs  Lexer.hs  Parse.hs  Pretty.hs  Type.hs
tests/: DocTests.hs  Main.hs  Tests.hs  index.html
tests/Tests/: Lint.hs  Mock.hs  Orphans.hs  ReferenceLexer.hs
tests/Tests/ReferenceLexer/: Str0.hs
tests/data/: buildseparate.expected  compdb.expected  lexical.expected  lint.expected  nocreate.expected  outputtouch.expected  phonyorder.expected  redefine.expected  test1.expected  test2.expected  test3.expected  test4.expected  test5.expected  test6.ninja
tests/static/: bootstrap.min.css
