name:                     language-ninja
version:                  0.0.1
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 Language
copyright:                2017 Awake Networks <opensource@awakenetworks.com>
author:                   Awake Networks
maintainer:               opensource@awakenetworks.com
license:                  Apache-2.0
license-file:             LICENSE.md
homepage:                 https://github.com/awakenetworks/language-ninja
bug-reports:              https://github.com/awakenetworks/language-ninja/issues
category:                 Build, Language
synopsis:                 A Haskell library for parsing, pretty-printing, and
                          evaluating the Ninja build language.
description:              A Haskell library for parsing, pretty-printing, and
                          evaluating the Ninja build language.

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/awakenetworks/haskell-ninja.git

library
    hs-source-dirs:       library
    build-depends:        base                  >= 4.8   && < 5.0
                        , aeson                 >= 1.0   && < 1.3
                        , aeson-pretty          >= 0.8   && < 0.9
                        , bytestring            >= 0.10  && < 0.11
                        , containers            >= 0.5   && < 0.6
                        , deepseq               >= 1.4   && < 1.5
                        , directory             >= 1.3   && < 1.4
                        , extra                 >= 1.5   && < 1.6
                        , flow                  >= 1.0   && < 1.1
                        , hashable              >= 1.2   && < 1.3
                        , intern                >= 0.9   && < 0.10
                        , makefile              >= 1.0   && < 1.1
                        , megaparsec            >= 5.2   && < 5.3
                        , lens                  >= 4.15  && < 4.16
                        , shake                 >= 0.15  && < 0.16
                        , system-filepath       >= 0.4   && < 0.5
                        , text                  >= 1.2   && < 1.3
                        , transformers          >= 0.5   && < 0.6
                        , unordered-containers  >= 0.2   && < 0.3
                        , versions              >= 3.1.1 && < 3.2
                          -- FIXME: remove unneeded dependencies
    exposed-modules:      Language.Ninja
                        , Language.Ninja.Env
                        , Language.Ninja.AST
                        , Language.Ninja.AST.Build
                        , Language.Ninja.AST.Meta
                        , Language.Ninja.AST.Ninja
                        , Language.Ninja.AST.Pool
                        , Language.Ninja.AST.Rule
                        , Language.Ninja.AST.Target
                        , Language.Ninja.Lexer
                        , Language.Ninja.Parse
                        , Language.Ninja.Pretty
                        , Language.Ninja.Shake
                        , Language.Ninja.Types
                        , Language.Ninja.Misc.Command
                        , Language.Ninja.Misc.Path
                        , Language.Ninja.Misc.IText
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -Wall -g
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
                          -- FIXME: remove all unused imports
                          -fno-warn-unused-imports

test-suite tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       tests
    main-is:              Main.hs
    build-depends:        language-ninja
                        , base                  >= 4.8.0.0 && < 5.0.0.0
                        , bytestring            -any
                        , hspec                 -any
                        , HUnit                 -any
                        , system-filepath       -any
                        , text                  -any
                        , transformers          -any
                        , turtle                -any
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -fhpc -Wall

executable ninja2nix
    hs-source-dirs:       executables
    main-is:              NinjaToNix.hs
    other-modules:        Misc.Hash
    build-depends:        language-ninja
                        , base                  >= 4.8.0.0 && < 5.0.0.0
                        , aeson                 -any
                        , aeson-pretty          -any
                        , bytestring            -any
                        , containers            -any
                        , cryptonite            >= 0.21    && < 0.22
                        , flow                  -any
                        , lens                  -any
                        , makefile              -any
                        , text                  -any
                        , unordered-containers  -any
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -threaded -Wall
