name:                     language-ninja
version:                  0.0.1
stability:                Experimental
build-type:               Simple
cabal-version:            >= 1.10
category:                 Language
copyright:                Copyright 2017 Awake Security
author:                   Awake Security
maintainer:               Awake Security <opensource@awakesecurity.com>
license:                  Apache-2.0
license-file:             LICENSE.md
homepage:                 https://github.com/awakesecurity/language-ninja
bug-reports:              https://github.com/awakesecurity/language-ninja/issues
category:                 Build, Language
synopsis:                 A Haskell library for parsing, pretty-printing, and
                          compiling the Ninja build language.
description:              A Haskell library for parsing, pretty-printing, and
                          compiling the Ninja build language.

source-repository head
    type:                 git
    branch:               master
    location:             https://github.com/awakesecurity/language-ninja.git

library
    hs-source-dirs:       library
    build-depends:        base                  >= 4.8   && < 5.0
                        , aeson                 >= 1.0   && < 1.3
                        , aeson-pretty          >= 0.8   && < 0.9
                        , bytestring            >= 0.10  && < 0.11
                        , containers            >= 0.5   && < 0.6
                        , deepseq               >= 1.4   && < 1.5
                        , directory             >= 1.3   && < 1.4
                        , Earley                >= 0.11  && < 0.12
                        , exceptions            >= 0.8   && < 0.9
                        , extra                 >= 1.5   && < 1.6
                        , flow                  >= 1.0   && < 1.1
                        , hashable              >= 1.2   && < 1.3
                        , intern                >= 0.9   && < 0.10
                        , makefile              >= 1.0   && < 1.1
                        , megaparsec            >= 5.2   && < 5.3
                        , mtl                   >= 2.2   && < 2.3
                        , lens                  >= 4.15  && < 4.16
                        , QuickCheck            >= 2.9   && < 2.10
                        , quickcheck-instances  >= 0.3   && < 0.4
                        , smallcheck            >= 1.1   && < 1.2
                        , shake                 >= 0.15  && < 0.16
                        , system-filepath       >= 0.4   && < 0.5
                        , text                  >= 1.2   && < 1.3
                        , transformers          >= 0.5   && < 0.6
                        , unordered-containers  >= 0.2   && < 0.3
                        , versions              >= 3.1.1 && < 3.2
                          -- FIXME: remove unneeded dependencies
    exposed-modules:      Language.Ninja
                        , Language.Ninja.AST
                        , Language.Ninja.AST.Build
                        , Language.Ninja.AST.Meta
                        , Language.Ninja.AST.Ninja
                        , Language.Ninja.AST.Pool
                        , Language.Ninja.AST.Rule
                        , Language.Ninja.AST.Target
                        , Language.Ninja.Compile
                        , Language.Ninja.Env
                        , Language.Ninja.Errors
                        , Language.Ninja.Errors.Compile
                        , Language.Ninja.Errors.Parse
                        , Language.Ninja.Lexer
                        , Language.Ninja.Parse
                        , Language.Ninja.Pretty
                        , Language.Ninja.Shake
                        , Language.Ninja.Types
                        , Language.Ninja.Misc.Command
                        , Language.Ninja.Misc.IText
                        , Language.Ninja.Misc.Located
                        , Language.Ninja.Misc.Path
                        , Language.Ninja.Misc.Positive
    other-modules:        Language.Ninja.Internal.Str0
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -Wall -g
                          -fno-warn-type-defaults
                          -fno-warn-unused-do-bind
                          -- FIXME: remove all unused imports
                          -fno-warn-unused-imports

test-suite tests
    type:                 exitcode-stdio-1.0
    hs-source-dirs:       tests
    main-is:              Tests.hs
    build-depends:        language-ninja
                        , base                  >= 4.8   && < 5.0
                        , aeson                 >= 1.0   && < 1.3
                        , aeson-diff            >= 1.1   && < 1.2
                        , aeson-pretty          >= 0.8   && < 0.9
                        , bytestring            >= 0.10  && < 0.11
                        , containers            >= 0.5   && < 0.6
                        , flow                  >= 1.0   && < 1.1
                        , hashable              >= 1.2   && < 1.3
                        , HUnit                 >= 1.5   && < 1.6
                        , lens                  >= 4.15  && < 4.16
                        , mtl                   >= 2.2   && < 2.3
                        , QuickCheck            >= 2.9   && < 2.10
                        , quickcheck-instances  >= 0.3   && < 0.4
                        , smallcheck            >= 1.1   && < 1.2
                        , smallcheck-lens       >= 0.3   && < 0.4
                        , system-filepath       >= 0.4   && < 0.5
                        , tasty                 >= 0.11  && < 0.12
                        , tasty-golden          >= 2.3   && < 2.4
                        , tasty-html            >= 0.4   && < 0.5
                        , tasty-hunit           >= 0.9   && < 0.10
                        , tasty-lens            >= 0.3   && < 0.4
                        , tasty-quickcheck      >= 0.8   && < 0.9
                        , tasty-smallcheck      >= 0.8   && < 0.9
                        , text                  >= 1.2   && < 1.3
                        , transformers          >= 0.5   && < 0.6
                        , turtle                >= 1.3   && < 1.4
                        , unordered-containers  >= 0.2   && < 0.3
                        , versions              >= 3.1.1 && < 3.2
                          -- FIXME: remove unneeded dependencies
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -fhpc -threaded -Wall

executable ninja2nix
    hs-source-dirs:       executables
    main-is:              NinjaToNix.hs
    other-modules:        Misc.Hash
    build-depends:        language-ninja
                        , base                  >= 4.8   && < 5.0
                        , aeson                 >= 1.0   && < 1.3
                        , aeson-pretty          >= 0.8   && < 0.9
                        , bytestring            >= 0.10  && < 0.11
                        , containers            >= 0.5   && < 0.6
                        , cryptonite            >= 0.21  && < 0.22
                        , flow                  >= 1.0   && < 1.1
                        , hashable              >= 1.2   && < 1.3
                        , lens                  >= 4.15  && < 4.16
                        , makefile              >= 1.0   && < 1.1
                        , text                  >= 1.2   && < 1.3
                        , unordered-containers  >= 0.2   && < 0.3
                          -- FIXME: remove unneeded dependencies
    default-language:     Haskell2010
    other-extensions:     OverloadedStrings
                          -- FIXME: add the rest of the extensions used
    ghc-options:          -threaded -Wall
